@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-45
+2016-4-14 David Schneider
+- add unit test for ocean optics datav3 JIRA PSAS-227
+	
 Tag: V00-02-44
 2016-4-4 David Schneider
 - update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
